remove insecure request

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     <script src="assets/js/angularjs/angular-ui-router.min.js"></script>
     <!-- bootstrap -->
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap/carousel.js"></script>
+    <script>
+    $(document).ready(function(){
+            $("#carousel-example-generic").carousel( { interval: 2000 } );
+              
+        });
+    </script>
+    
      <!-- AngularJS App -->
     <script src="assets/js/myWeb/myWeb.js"></script>
     <script src="assets/js/myWeb/myWeb.controller.js"></script>
