--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <meta name="author" content="Jinhai ZHOU">
     <title>Jinhai ZHOU</title>
     <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom style for bootstrap navbar-->
     <link href="assets/css/navbar-fixed-top.css" rel="stylesheet">
-    <!-- legacy CSS -->
-    <link href="assets/css/legacy/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/legacy/typography.css" rel="stylesheet">
+    <link href="assets/css/myWeb.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
